--- a/docs/css/percona.css
+++ b/docs/css/percona.css
@@ -11,7 +11,7 @@
     --md-primary-fg-color--light: #3e4875;
     --md-primary-fg-color--dark:  #080e2e;
     */
-    --md-typeset-a-color: #74e0cb;
+    --md-typeset-a-color: #2cbea2;
     --md-hue: 210; /* [0, 360] */
   }
 ul li p {
@@ -41,6 +41,16 @@ line-height: 1.4;
 margin: 1em 0 .54em;
 }
 
+article table {
+  page-break-before: auto !important;
+  page-break-inside: auto !important;
+}
+
+article ol {
+  page-break-before: auto !important;
+  page-break-inside: auto !important;
+}
+
 .md-typeset .md-button {
     border: .1rem solid;
     border-radius: 50px;
@@ -64,7 +74,74 @@ margin: 1em 0 .54em;
     color:var(--md-accent-bg-color)
 }
 
+section {
+  page-break-before: auto !important;
+  page-break-inside: auto !important;
+}
 
+/* Custom Banner */
+[data-banner] {
+    padding: 1.5em;
+    margin: 2em 0;
+    border: 0.05rem solid var(--md-default-fg-color--lighter);
+    /* border: 0.05rem solid var(--md-typeset-table-color); */
+    border-radius: 0.2rem;
+}
+[data-banner] .title {
+    font-weight: normal;
+    margin: 0;
+}
+[data-banner] > :last-child {
+    margin-bottom: 0;
+}
+[data-banner] a:link {
+    font-weight: bold;
+}
+[data-banner] .actions > p {
+    margin: 0;
+}
+[data-banner] .actions a {
+    display: inline-block;
+    margin: 0.5em 1.5em 0 0;
+}
+[data-banner] > :only-child,
+[data-banner] .actions a:first-of-type {
+    margin-top: 0;
+}
+[data-banner] a [class*="moji"] {
+    height: 1.3333em;
+    vertical-align: -0.3333em;
+}
+[data-banner] a [class*="moji"] svg {
+    width: 1.3333em;
+}
+[data-grid] {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -1rem;
+}
+[data-grid] [data-banner] {
+    flex: 1 1 320px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 1rem 1rem 0;
+}
+[data-grid] .title {
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+[data-grid] [data-banner] > p:last-child {
+    margin-top: 0;
+}
+[data-grid] [data-banner] > p:nth-last-child(2) {
+    flex-grow: 2;
+}
+[data-grid] + [data-banner] {
+    margin-top: 0;
+}
+[data-grid] .md-button {
+    margin: 0.5em 0.25em 0 0;
+}
 
 /*.git-revision-date-localized-plugin:before {
   content: url('https://api.iconify.design/mdi/clock-edit-outline.svg');
